bug(exhibitions): fixed a bug where the z-index hid the hover-effect on cards

--- a/project-3/css/style.scss
+++ b/project-3/css/style.scss
@@ -129,6 +129,7 @@ section.hero {
     width: 50%;
     position: relative;
     left: 4rem;
+    z-index: 1;
   }
 }
 
@@ -137,7 +138,7 @@ section.exhibitions {
   padding: 20rem 0;
   position: relative;
   top: -200px;
-  z-index: -1;
+
   h2 {
     text-align: center;
     font-weight: 300;
